# game-server

./: Cargo.toml  Dockerfile  fly.toml
src/: main.rs
