[package]
name = "game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "*"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
